--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -235,8 +235,7 @@
     if (imgEl.complete) cb();
     else imgEl.addEventListener('load', cb, { once: true });
   }
-
-  function showMap(){
+function showMap(){
   document.getElementById('tab-map').classList.add('active');
   document.getElementById('tab-list').classList.remove('active');
   wrapEl.classList.add('active');
@@ -256,15 +255,15 @@
       setFullscreenVH();
       wrapEl.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
 
-      // Hier Startposition mit START_X_PERCENT berechnen
-      const { scale, x, y } = computeFit(START_X_PERCENT);
+      // Normale Fit-Position berechnen
+      const { scale, x, y } = computeFit(0.5); // wir starten zentriert
 
       if (!panzoomInstance) {
         panzoomInstance = Panzoom(mapEl, {
           maxScale: 4,
           contain: 'outside',
           startScale: scale,
-          startX: x, // <-- bereits verschoben
+          startX: x,
           startY: y,
           animate: true
         });
@@ -275,15 +274,17 @@
         }, { passive: false });
       }
 
-      // Auch hier wieder verschoben setzen
+      // 🔹 Jetzt manuellen Offset auf X anwenden (in Pixeln)
+      const EXTRA_X_SHIFT = -200; // negative Werte = nach links, positive = nach rechts
       panzoomInstance.setOptions({ minScale: scale });
-      panzoomInstance.setTransform({ x, y, scale });
+      panzoomInstance.setTransform({ x: x + EXTRA_X_SHIFT, y, scale });
     };
 
-    doFit(); // sofort
-    setTimeout(doFit, 150); // Sicherheits-fit
+    doFit(); 
+    setTimeout(doFit, 150);
   });
 }
+
 
 
   /* ====== LISTE & DATEN ====== */
@@ -363,5 +364,6 @@
 </script>
 </body>
 </html>
+
 
 
