--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -250,33 +250,32 @@
 
     const mapImgEl = document.querySelector('.map-img');
 
-    waitForImage(mapImgEl, () => {
-      const doFit = () => {
-        setFullscreenVH();
-        wrapEl.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
-        const { scale, x, y } = computeFit(START_X_PERCENT);
+waitForImage(mapImgEl, () => {
+  const doFit = () => {
+    setFullscreenVH();
+    wrapEl.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
+    const { scale, x, y } = computeFit(START_X_PERCENT);
 
-        if (!panzoomInstance) {
-          panzoomInstance = Panzoom(mapEl, {
-            maxScale: 4,
-            contain: 'outside',
-            startScale: scale,
-            startX: x,
-            startY: y,
-            animate: true
-          });
-          wrapEl.addEventListener('wheel', (e) => {
-            e.preventDefault();
-            panzoomInstance.zoomWithWheel(e);
-          }, { passive: false });
-        }
-        panzoomInstance.setOptions({ minScale: scale });
-        panzoomInstance.setTransform({ x, y, scale });
-      };
+    if (!panzoomInstance) {
+      panzoomInstance = Panzoom(mapEl, {
+        maxScale: 4,
+        contain: 'outside',
+        animate: true
+      });
+      wrapEl.addEventListener('wheel', (e) => {
+        e.preventDefault();
+        panzoomInstance.zoomWithWheel(e);
+      }, { passive: false });
+    }
+    
+    // Hier gezielt setzen
+    panzoomInstance.setOptions({ minScale: scale });
+    panzoomInstance.setTransform({ x, y, scale }); 
+  };
 
-      doFit();            // sofort
-      setTimeout(doFit, 150); // Sicherheits-fit
-    });
+  doFit();
+  setTimeout(doFit, 150); // Sicherheits-fit
+});
   }
 
   /* ====== LISTE & DATEN ====== */
@@ -356,3 +355,4 @@
 </script>
 </body>
 </html>
+
