--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -158,8 +158,7 @@
   const isMobile = () => window.matchMedia('(max-width: 768px)').matches;
 
   // 0 = linker Rand, 0.5 = Kartenmitte, 1 = rechter Rand
-let START_X_PERCENT = 1; // Horizontal
-let START_Y_PERCENT = 1; // Vertikal
+  const START_X_PERCENT = 0.5;
 
   /* ====== DOM ====== */
   const wrapEl = document.getElementById('mapwrap');
@@ -202,23 +201,20 @@ let START_Y_PERCENT = 1; // Vertikal
   }
 
   /* ====== Fit-Funktionen ====== */
-function computeFit(xPercent = START_X_PERCENT, yPercent = START_Y_PERCENT) {
-  const rect = wrapEl.getBoundingClientRect();
-  const scale = Math.min(rect.width / MAP_W, rect.height / MAP_H);
+  function computeFit(xPercent = START_X_PERCENT, yAlign = 'center') {
+    const rect = wrapEl.getBoundingClientRect();
+    const scale = Math.min(rect.width / MAP_W, rect.height / MAP_H);
+    const x = rect.width / 2 - (MAP_W * xPercent) * scale;           // gewünschter Kartenanteil mittig
+    const y = (yAlign === 'top') ? 0 : (rect.height - MAP_H * scale) / 2;
+    return { scale, x, y };
+  }
 
-  // X- und Y-Startposition aus Prozent berechnen
-  const x = rect.width / 0.8 - (MAP_W * xPercent) * scale;
-  const y = rect.height / 0.6 - (MAP_H * yPercent) * scale;
-
-  return { scale, x, y };
-}
-
-function fitAndCenter(xPercent = START_X_PERCENT, yPercent = START_Y_PERCENT) {
-  if (!panzoomInstance) return;
-  const { scale, x, y } = computeFit(xPercent, yPercent);
-  panzoomInstance.setTransform({ x, y, scale });
-  panzoomInstance.setOptions({ minScale: scale });
-}
+  function fitAndCenter(xPercent = START_X_PERCENT) {
+    if (!panzoomInstance) return;
+    const { scale, x, y } = computeFit(xPercent);
+    panzoomInstance.setTransform({ x, y, scale });
+    panzoomInstance.setOptions({ minScale: scale });
+  }
 
   /* ====== NAVIGATION ====== */
   function enterMapFullscreen(){ document.body.classList.add('fullscreen-map'); }
@@ -254,33 +250,33 @@ function fitAndCenter(xPercent = START_X_PERCENT, yPercent = START_Y_PERCENT) {
 
     const mapImgEl = document.querySelector('.map-img');
 
-waitForImage(mapImgEl, () => {
-  const doFit = () => {
-    setFullscreenVH();
-    wrapEl.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
-const { scale, x, y } = computeFit(START_X_PERCENT, START_Y_PERCENT);
+    waitForImage(mapImgEl, () => {
+      const doFit = () => {
+        setFullscreenVH();
+        wrapEl.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
+        const { scale, x, y } = computeFit(START_X_PERCENT);
 
+        if (!panzoomInstance) {
+          panzoomInstance = Panzoom(mapEl, {
+            maxScale: 4,
+            contain: 'outside',
+            startScale: scale,
+            startX: x,
+            startY: y,
+            animate: true
+          });
+          wrapEl.addEventListener('wheel', (e) => {
+            e.preventDefault();
+            panzoomInstance.zoomWithWheel(e);
+          }, { passive: false });
+        }
+        panzoomInstance.setOptions({ minScale: scale });
+        panzoomInstance.setTransform({ x, y, scale });
+      };
 
-    if (!panzoomInstance) {
-      panzoomInstance = Panzoom(mapEl, {
-        maxScale: 4,
-        contain: 'outside',
-        animate: true
-      });
-      wrapEl.addEventListener('wheel', (e) => {
-        e.preventDefault();
-        panzoomInstance.zoomWithWheel(e);
-      }, { passive: false });
-    }
-    
-    // Hier gezielt setzen
-    panzoomInstance.setOptions({ minScale: scale });
-    panzoomInstance.setTransform({ x, y, scale }); 
-  };
-
-  doFit();
-  setTimeout(doFit, 150); // Sicherheits-fit
-});
+      doFit();            // sofort
+      setTimeout(doFit, 150); // Sicherheits-fit
+    });
   }
 
   /* ====== LISTE & DATEN ====== */
@@ -360,6 +356,3 @@ const { scale, x, y } = computeFit(START_X_PERCENT, START_Y_PERCENT);
 </script>
 </body>
 </html>
-
-
-
