--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -251,30 +251,33 @@
     const mapImgEl = document.querySelector('.map-img');
 
     waitForImage(mapImgEl, () => {
-  const doFit = () => {
-    setFullscreenVH();
-    wrapEl.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
-    const { scale, x, y } = computeFit(START_X_PERCENT);
+      const doFit = () => {
+        setFullscreenVH();
+        wrapEl.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
+        const { scale, x, y } = computeFit(START_X_PERCENT);
 
-    if (!panzoomInstance) {
-      panzoomInstance = Panzoom(mapEl, {
-        maxScale: 4,
-        contain: 'outside',
-        animate: true
-      });
-      wrapEl.addEventListener('wheel', (e) => {
-        e.preventDefault();
-        panzoomInstance.zoomWithWheel(e);
-      }, { passive: false });
-    }
+        if (!panzoomInstance) {
+          panzoomInstance = Panzoom(mapEl, {
+            maxScale: 4,
+            contain: 'outside',
+            startScale: scale,
+            startX: x,
+            startY: y,
+            animate: true
+          });
+          wrapEl.addEventListener('wheel', (e) => {
+            e.preventDefault();
+            panzoomInstance.zoomWithWheel(e);
+          }, { passive: false });
+        }
+        panzoomInstance.setOptions({ minScale: scale });
+        panzoomInstance.setTransform({ x, y, scale });
+      };
 
-    panzoomInstance.setOptions({ minScale: scale });
-    panzoomInstance.setTransform({ x, y, scale });
-  };
-
-  doFit();              // sofort
-  setTimeout(doFit, 150); // Sicherheits-fit
-});
+      doFit();            // sofort
+      setTimeout(doFit, 150); // Sicherheits-fit
+    });
+  }
 
   /* ====== LISTE & DATEN ====== */
   const categories = [
@@ -353,6 +356,3 @@
 </script>
 </body>
 </html>
-
-
-
