--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -132,8 +132,10 @@ iouhqwdoijbSF<!DOCTYPE html>
   <div class="mapwrap" id="mapwrap">
     <div class="map" id="map">
       <img src="bilder/TXL Lageplan LAF-vektorisiert_013_HD(1).png" alt="Karte" class="map-img" draggable="false" />
-      <div class="pin" id="pin-P5" style="top:58%; left:33%;"><img src="icons/P5Icon.png" alt="P5"/></div>
-      <div class="pin" id="pin-Kruemelecke" style="top:45%; left:60%;"><img src="icons/KruemeleckeIcon.png" alt="Krümelecke"/></div>
+      <div class="pin" id="pin-P5" style="top:57.49%; left:33.25%;"><img src="icons/P5Icon.png" alt="P5"/></div>
+      <div class="pin" id="pin-Kruemelecke" style="top:37.9%; left:28.25%;"><img src="icons/KruemeleckeIcon.png" alt="Krümelecke"/></div>
+      <div class="pin" id="pin-Sandburg" style="left:24.7%; top:5.9%;"><img src="icons/SandburgIcon.png" alt="Sandburg"/></div>
+      <div class="pin" id="pin-Q1" style="top:88.4%; left:44.4%;"><img src="icons/Q1Icon.png" alt="Q1"/></div>
     </div>
   </div>
 
@@ -356,4 +358,5 @@ iouhqwdoijbSF<!DOCTYPE html>
 </script>
 </body>
 </html>
+
 
