--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -1,4 +1,4 @@
-iouhqwdoijbSF<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
 <meta charset="utf-8" />
@@ -358,5 +358,6 @@ iouhqwdoijbSF<!DOCTYPE html>
 </script>
 </body>
 </html>
+
 
 
