--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -152,14 +152,35 @@
       <div class="pin" id="pin-Post" style="top:39%; left:45.2%;"><img src="icons/PostIcon.png" alt="Post"/></div>
       <div class="pin" id="pin-Kleiderkammer" style="top:14.2%; left:54.4%;"><img src="icons/KleiderkammerIcon.png" alt="Kleiderkammer"/></div>
       <div class="pin" id="pin-Infopoint" style="top:40.96%; left:37.8%;"><img src="icons/InfopointIcon.png" alt="Infopoint"/></div>
-      <div class="pin" id="pin-P5" style="top:57.49%; left:33.25%;"><img src="icons/P5Icon.png" alt="P5"/></div>
-      <div class="pin" id="pin-Kruemelecke" style="top:37.9%; left:28.25%;"><img src="icons/KruemeleckeIcon.png" alt="Krümelecke"/></div>
-      <div class="pin" id="pin-Sandburg" style="left:24.7%; top:5.9%;"><img src="icons/SandburgIcon.png" alt="Sandburg"/></div>
-      <div class="pin" id="pin-Q1" style="top:88.4%; left:44.4%;"><img src="icons/Q1Icon.png" alt="Q1"/></div>
-      <div class="pin" id="pin-Q" style="top:88.9%; left:50%;"><img src="icons/QIcon.png" alt="Q"/></div>
-      <div class="pin" id="pin-Post" style="top:39%; left:45.2%;"><img src="icons/PostIcon.png" alt="Post"/></div>
-      <div class="pin" id="pin-Kleiderkammer" style="top:14.2%; left:54.4%;"><img src="icons/KleiderkammerIcon.png" alt="Kleiderkammer"/></div>
-      <div class="pin" id="pin-Infopoint" style="top:40.96%; left:37.8%;"><img src="icons/InfopointIcon.png" alt="Infopoint"/></div>
+      <!-- Bereits vorhanden -->
+<div class="pin" id="pin-P5" style="top:57.49%; left:33.25%;"><img src="icons/P5Icon.png" alt="P5"/></div>
+<div class="pin" id="pin-Kruemelecke" style="top:37.9%; left:28.25%;"><img src="icons/KruemeleckeIcon.png" alt="Krümelecke"/></div>
+<div class="pin" id="pin-Sandburg" style="left:24.7%; top:5.9%;"><img src="icons/SandburgIcon.png" alt="Sandburg"/></div>
+<div class="pin" id="pin-Q1" style="top:88.4%; left:44.4%;"><img src="icons/Q1Icon.png" alt="Q1"/></div>
+<div class="pin" id="pin-Q" style="top:88.9%; left:50%;"><img src="icons/QIcon.png" alt="Q"/></div>
+<div class="pin" id="pin-Post" style="top:39%; left:45.2%;"><img src="icons/PostIcon.png" alt="Post"/></div>
+<div class="pin" id="pin-Kleiderkammer" style="top:14.2%; left:54.4%;"><img src="icons/KleiderkammerIcon.png" alt="Kleiderkammer"/></div>
+<div class="pin" id="pin-Infopoint" style="top:40.96%; left:37.8%;"><img src="icons/InfopointIcon.png" alt="Infopoint"/></div>
+<div class="pin" id="pin-Malteapp" style="top:41%; left:76%;"><img src="icons/MalteappIcon.png" alt="Malte App"/></div>
+<div class="pin" id="pin-L1" style="top:20.3%; left:14.7%;"><img src="icons/L1Icon.png" alt="L1"/></div>
+<div class="pin" id="pin-L2" style="top:10.5%; left:14.7%;"><img src="icons/L2Icon.png" alt="L2"/></div>
+<div class="pin" id="pin-H" style="top:18.7%; left:28.25%;"><img src="icons/HIcon.png" alt="H"/></div>
+<div class="pin" id="pin-D3" style="top:9.7%; left:54.4%;"><img src="icons/D3Icon.png" alt="D3"/></div>
+<div class="pin" id="pin-M5" style="top:54.5%; left:61.5%;"><img src="icons/M5Icon.png" alt="M5"/></div>
+<div class="pin" id="pin-VWG1" style="top:54.8%; left:41.7%;"><img src="icons/VWG1Icon.png" alt="VWG1"/></div>
+<div class="pin" id="pin-VWG2" style="top:52.48%; left:38.02%;"><img src="icons/VWG2Icon.png" alt="VWG2"/></div>
+<div class="pin" id="pin-Med" style="top:57.8%; left:39.7%;"><img src="icons/MedIcon.png" alt="Med"/></div>
+<div class="pin" id="pin-VWG3" style="top:57.45%; left:45.18%;"><img src="icons/VWG3Icon.png" alt="VWG3"/></div>
+<div class="pin" id="pin-KW" style="top:65.5%; left:34.5%;"><img src="icons/KrähenwaldIcon.png" alt="Krähenwald"/></div>
+<div class="pin" id="pin-WS" style="top:89%; left:74.5%;"><img src="icons/WSIcon.png" alt="Willkommensschule"/></div>
+<div class="pin" id="pin-Waschsalon" style="top:68%; left:40.5%;"><img src="icons/WaschsalonIcon.png" alt="Waschsalon"/></div>
+<div class="pin" id="pin-Bus" style="top:27.35%; left:42.5%;"><img src="icons/BusIcon.png" alt="Bus"/></div>
+<div class="pin" id="pin-Clowns" style="top:28%; left:60%;"><img src="icons/ClownsIcon.png" alt="Clowns"/></div>
+<div class="pin" id="pin-Begleitdienst" style="top:44%; left:33.1%;"><img src="icons/BegleitdienstIcon.png" alt="Begleitdienst"/></div>
+<div class="pin" id="pin-Sozialerdienst" style="top:33.5%; left:27.3%;"><img src="icons/SozialerdienstIcon.png" alt="Sozialer Dienst"/></div>
+<div class="pin" id="pin-Checkin" style="top:39%; left:33.1%;"><img src="icons/CheckinIcon.png" alt="Checkin"/></div>
+<div class="pin" id="pin-Sprachmittlung" style="top:44%; left:35.5%;"><img src="icons/SprachmittlungIcon.png" alt="Sprachmittlung"/></div>
+<div class="pin" id="pin-Bistro" style="top:44%; left:44.5%;"><img src="icons/BistroIcon.png" alt="Bistro"/></div>
     </div>
   </div>
 
@@ -395,6 +416,7 @@ const categories = [
 </script>
 </body>
 </html>
+
 
 
 
