--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -144,15 +144,6 @@
   <div class="mapwrap" id="mapwrap">
     <div class="map" id="map">
       <img src="bilder/TXL Lageplan LAF-vektorisiert_013_HD(1).png" alt="Karte" class="map-img" draggable="false" />
-      <div class="pin" id="pin-P5" style="top:57.49%; left:33.25%;"><img src="icons/P5Icon.png" alt="P5"/></div>
-      <div class="pin" id="pin-Kruemelecke" style="top:37.9%; left:28.25%;"><img src="icons/KruemeleckeIcon.png" alt="Krümelecke"/></div>
-      <div class="pin" id="pin-Sandburg" style="left:24.7%; top:5.9%;"><img src="icons/SandburgIcon.png" alt="Sandburg"/></div>
-      <div class="pin" id="pin-Q1" style="top:88.4%; left:44.4%;"><img src="icons/Q1Icon.png" alt="Q1"/></div>
-      <div class="pin" id="pin-Q" style="top:88.9%; left:50%;"><img src="icons/QIcon.png" alt="Q"/></div>
-      <div class="pin" id="pin-Post" style="top:39%; left:45.2%;"><img src="icons/PostIcon.png" alt="Post"/></div>
-      <div class="pin" id="pin-Kleiderkammer" style="top:14.2%; left:54.4%;"><img src="icons/KleiderkammerIcon.png" alt="Kleiderkammer"/></div>
-      <div class="pin" id="pin-Infopoint" style="top:40.96%; left:37.8%;"><img src="icons/InfopointIcon.png" alt="Infopoint"/></div>
-      <!-- Bereits vorhanden -->
 <div class="pin" id="pin-P5" style="top:57.49%; left:33.25%;"><img src="icons/P5Icon.png" alt="P5"/></div>
 <div class="pin" id="pin-Kruemelecke" style="top:37.9%; left:28.25%;"><img src="icons/KruemeleckeIcon.png" alt="Krümelecke"/></div>
 <div class="pin" id="pin-Sandburg" style="left:24.7%; top:5.9%;"><img src="icons/SandburgIcon.png" alt="Sandburg"/></div>
@@ -171,7 +162,7 @@
 <div class="pin" id="pin-VWG2" style="top:52.48%; left:38.02%;"><img src="icons/VWG2Icon.png" alt="VWG2"/></div>
 <div class="pin" id="pin-Med" style="top:57.8%; left:39.7%;"><img src="icons/MedIcon.png" alt="Med"/></div>
 <div class="pin" id="pin-VWG3" style="top:57.45%; left:45.18%;"><img src="icons/VWG3Icon.png" alt="VWG3"/></div>
-<div class="pin" id="pin-KW" style="top:65.5%; left:34.5%;"><img src="icons/KrähenwaldIcon.png" alt="Krähenwald"/></div>
+<div class="pin" id="pin-Krähenwald" style="top:65.5%; left:34.5%;"><img src="icons/KrähenwaldIcon.png" alt="Krähenwald"/></div>
 <div class="pin" id="pin-WS" style="top:89%; left:74.5%;"><img src="icons/WSIcon.png" alt="Willkommensschule"/></div>
 <div class="pin" id="pin-Waschsalon" style="top:68%; left:40.5%;"><img src="icons/WaschsalonIcon.png" alt="Waschsalon"/></div>
 <div class="pin" id="pin-Bus" style="top:27.35%; left:42.5%;"><img src="icons/BusIcon.png" alt="Bus"/></div>
@@ -334,7 +325,7 @@ const categories = [
 
   // Medizin / Hilfe
   { id:'health', label:{de:'Medizin & Hilfe', en:'Medical & Help'},
-    areas:['Med','VWG1','VWG2','VWG3'] }, // VWG* je nach Inhalt; gern anpassen
+    areas:['Med','VWG1','VWG2','VWG3'] }, // 
 
   // Services / Info
   { id:'services', label:{de:'Service & Info', en:'Services & Info'},
@@ -342,7 +333,7 @@ const categories = [
 
   // Gelände / Orientierung
   { id:'site', label:{de:'Gelände', en:'Site'},
-    areas:['Q','Q1','L1','L2','H','D3','M5','KW','WS','Bus'] }
+    areas:['Q','Q1','L1','L2','H','D3','M5','Krähenwald','WS','Bus'] }
 ];
 
 
@@ -416,6 +407,7 @@ const categories = [
 </script>
 </body>
 </html>
+
 
 
 
